2009-09-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fixed to compile for AIX instant clients.
	    (reported by Kazuya Teramoto)

2009-06-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Change the initial polling interval of
	    non-blocking mode for ruby 1.8 from 100 msec to 10 msec, which
	    is same with ruby-oci8 1.0.
	* ext/oci8/oci8.c: Change the default setting of non-blocking mode
	    for ruby 1.9 to true. Revise rdoc comments.

2009-06-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: revise rdoc comments.

2009-06-05  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: check rdoc version when making rdoc documentation.
	    The rdoc version must be 2.4.
	* ext/oci8/.document, ext/oci8/oci8.c, lib/.document,
	  lib/oci8/.document, lib/oci8/oci8.rb: fix rdoc comments a bit.

2009-05-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/datetime.rb, lib/oci8/object.rb:
	    add DATE datatype support in object types.

2009-05-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: delete OCI8::BindType::Fixnum.
	* lib/oci8/compat.rb: add OCI8::BindType::Fixnum as an alias
	    of OCI8::BindType::Integer.
	* ext/oci8/extconf.rb: change extconf.rb's argument value of
	    '--with-oracle-version' to accept dotted version such as
	    '9.2.0.'
	* ext/oci8/oraconf.rb: When extconf.rb fails and it is run
	    by sudo command, change the error message to notice that
	    'sudo' may unset environment variables.

2009-05-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: revise rdoc comments for OCI8#ping and
	    OCI8#client_identifier=. Add OCI8#module=, OCI8#action= and
	    OCI8#client_info.
	* test/test_appinfo.rb: add test cases for OCI8#module=,
	    OCI8#action= and OCI8#client_info.

2009-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.1 and 2.0.2.
	* VERSION: change version to 2.0.2.
	* dist-files: append newly added files.