@@ -119,14 +119,12 @@ replace = {
 # make ruby script before running create_makefile.
 replace_keyword(File.dirname(__FILE__) + '/../../lib/oci8.rb.in', '../../lib/oci8.rb', replace)
 
-case RUBY_VERSION
-when /^1\.9\.1/
-  so_basename = "oci8lib_191"
-when /^1\.8/
-  so_basename = "oci8lib_18"
-else
-  raise 'unsupported ruby version: ' + RUBY_VERSION
-end
+# Config::CONFIG["ruby_version"] indicates the ruby API version.
+#  1.8   - ruby 1.8.x
+#  1.9.1 - ruby 1.9.1 and 1.9.2
+#  1.9.x - ruby 1.9.x future version which will break the API compatibility
+so_basename = "oci8lib_" + Config::CONFIG["ruby_version"].gsub(/\W/, '')
+
 $defs << "-DInit_oci8lib=Init_#{so_basename}"
 $defs << "-Doci8lib=#{so_basename}"
 
